--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+
 .jumbotron {
     margin-bottom: 0px; 
+    background-color: #FFFFFF;
+    padding: 0%;
+}
+img {
+    display: inline-block;
+    margin-left: 20px;
+    padding: none;
 }
