--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,7 @@ img {
 .navbar-inverse .navbar-nav>li>a{
     color:black;
 }
+.navbar-inverse .navbar-nav>.active>a, .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
+    color: #fff;
+    background-color:#0B614B;
+}
