--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,15 @@ img {
 
 .navbar-inverse{
     background-color: #A4A4A4;
-    border-color: #A4A4A4;
+    border-color: #2E2E2E;
+    font-size: 17px;
 }
 .navbar-inverse .navbar-nav>li>a{
     color:black;
 }
-.navbar-inverse .navbar-nav>.active>a, .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
-    color: #fff;
-    background-color:#0B614B;
+.navbar-inverse .navbar-nav>li>a:hover{
+    color:#FFFFFF;
+    background-color: green; 
 }
+
+
