--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,12 @@ img {
 .navbar-inverse .navbar-nav>li>a{
     color:black;
 }
-<<<<<<< HEAD
 .lbl {
     text-align:right;
     color:red;
-=======
-.navbar-inverse .navbar-nav>.active>a, .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
-    color: #fff;
-    background-color:#0B614B;
->>>>>>> 749c2fdb43c57adc86580a91ba77b4dbf501c964
+    margin-right: 20px;
+    font-size: 20px;
+}
+table{
+    width: 100%; 
 }
