--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,18 @@ table{
     color:#FFFFFF;
     background-color: green; 
 }
-
-
-
 .lbl {
     text-align:right;
     color:red;
 }
-
+.btn, .btn-success{
+  margin: 0px;
+  padding: 2px;
+}
+.btn, .label{
+    margin-left: 5px;
+    font-size: 75%;
+    font-weight: 700;
+}
 
 
